crates/brokkr-cli/src/tui/snapshots/fleet_of_every_status_80x20.snap
---
source: crates/brokkr-cli/src/tui/snapshot_tests.rs
---
"┌runs──────────────────────────────────────────────────────────────────────────┐"
"│needs you                                                                     │"
"│● parked      —              a run in one status       7m03s    run-parked    │"
"│running                                                                       │"
"│▶ design                     a run in one status       7m03s    run-running   │"
"│last 24h                                                                      │"
"│■ stopped     by operator    a run in one status       7m03s    run-stopped   │"
"│✓ shipped     clean          a run in one status       7m03s    run-completed │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"runs                                                                            "
"↑↓/jk move · Enter open run · a all runs · g/G top/bottom · / filter · r refresh"
