crates/brokkr-cli/src/tui/snapshots/fleet_opened_in_place_160x48.snap
---
source: crates/brokkr-cli/src/tui/snapshot_tests.rs
---
"┌runs──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│needs you                                                                                                                                                     │"
"│! stale                               LANDING PR #420: the fleet lists who must act first                                  168h07m landi…9d8c7b6a             │"
"│                                      stale: no event since 116h07m; resume or conclude                                                                       │"
"│? quarantined does not fold           A journal that does not fold                                                         7m03s   journ…7f8e9d0c             │"
"│                                      quarantined: conclude or inspect                                                                                        │"
"│● parked      UNVERIFIED-SE… high     #362 cargo exemption                                                                 7m03s   cargo…5b6c7d8e             │"
"│running                                                                                                                                                       │"
"│◐ review                              #403 macOS fix, round 9: PR #483's test (macos-latest) job fails four protocol tests 7m03s   fix-4…3c1f9a02             │"
"│                                      phase review · seat reviewer · attempt 2                                                                                │"
"│                                      elapsed 7m03s · last event 2m03s ago, seq 18                                                                            │"
"│◐ triage                              0065 rebuild unit 20                                                                 7m03s   0065-…1c2d3e4f             │"
"│last 24h                                                                                                                                                      │"
"│✓ shipped     COMPLETE                Landing 5 of the fleet view                                                          7m03s   landi…6e7f8a9b             │"
"│✓ shipped     COMPLETE       low      Landing 4 of the fleet view                                                          7m03s   landi…2a3b4c5d             │"
"│✗ stopped     FAIL-EXHAUSTED          0065 rebuild unit 19                                                                 7m03s   0065-…8c9d0e1f             │"
"│2 older runs: press a to show                                                                                                                                 │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"runs                                                                                                                                                            "
"↑↓/jk move · Enter open run · ← fold · Tab detail ≥225 · a all runs · g/G top/bottom · / filter · r refresh · ? help · q quit                                   "
