crates/brokkr-cli/src/tui/snapshots/fleet_opened_in_place_80x20.snap
---
source: crates/brokkr-cli/src/tui/snapshot_tests.rs
---
"┌runs──────────────────────────────────────────────────────────────────────────┐"
"│needs you                                                                     │"
"│! stale                               LANDING PR #420:… 168h07m landi…9d8c7b6a│"
"│                                      stale: no event…                        │"
"│? quarantined does not fold           A journal that…   7m03s   journ…7f8e9d0c│"
"│                                      quarantined:…                           │"
"│● parked      UNVERIFIED-SE… high     #362 cargo…       7m03s   cargo…5b6c7d8e│"
"│running                                                                       │"
"│◐ review                              #403 macOS fix,…  7m03s   fix-4…3c1f9a02│"
"│                                      phase review ·…                         │"
"│                                      elapsed 7m03s ·…                        │"
"│◐ triage                              0065 rebuild…     7m03s   0065-…1c2d3e4f│"
"│last 24h                                                                      │"
"│✓ shipped     COMPLETE                Landing 5 of the… 7m03s   landi…6e7f8a9b│"
"│✓ shipped     COMPLETE       low      Landing 4 of the… 7m03s   landi…2a3b4c5d│"
"│✗ stopped     FAIL-EXHAUSTED          0065 rebuild…     7m03s   0065-…8c9d0e1f│"
"│2 older runs: press a to show                                                 │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"runs                                                                            "
"Enter open run · ← fold · Tab detail ≥225 · a all runs · / filter · ? help      "
