crates/brokkr-cli/src/tui/snapshots/fleet_sections_160x48.snap
---
source: crates/brokkr-cli/src/tui/snapshot_tests.rs
---
"┌runs──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│needs you                                                                                                                                                     │"
"│? quarantined does not fold           A journal that does not fold                                                                      7m03s   journ…7f8e9d0c│"
"│● parked      UNVERIFIED-SE… high     #362 cargo exemption                                                                              7m03s   cargo…5b6c7d8e│"
"│running                                                                                                                                                       │"
"│▶ review                              #403 macOS fix, round 9: PR #483's test (macos-latest) job…                                       7m03s   fix-4…3c1f9a02│"
"│▶ triage                              0065 rebuild unit 20                                                                              7m03s   0065-…1c2d3e4f│"
"│last 24h                                                                                                                                                      │"
"│✓ shipped     COMPLETE                Landing 5 of the fleet view                                                                       7m03s   landi…6e7f8a9b│"
"│✓ shipped     COMPLETE       low      Landing 4 of the fleet view                                                                       7m03s   landi…2a3b4c5d│"
"│✗ stopped     FAIL-EXHAUSTED          0065 rebuild unit 19                                                                              7m03s   0065-…8c9d0e1f│"
"│older         2 hidden                a shows them                                                                                                            │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"runs                                                                                                                                                            "
"↑↓/jk move · Enter open run · a all runs · g/G top/bottom · / filter · r refresh · ? help · q quit                                                              "
