crates/brokkr-cli/src/tui/snapshots/fleet_sections_80x20.snap
---
source: crates/brokkr-cli/src/tui/snapshot_tests.rs
---
"┌runs──────────────────────────────────────────────────────────────────────────┐"
"│needs you                                                                     │"
"│? quarantined does not fold           A journal that do 7m03s   journ…7f8e9d0c│"
"│● parked      UNVERIFIED-SE… high     #362 cargo exempt 7m03s   cargo…5b6c7d8e│"
"│running                                                                       │"
"│▶ review                              #403 macOS fix, r 7m03s   fix-4…3c1f9a02│"
"│▶ triage                              0065 rebuild unit 7m03s   0065-…1c2d3e4f│"
"│last 24h                                                                      │"
"│✓ shipped     COMPLETE                Landing 5 of the  7m03s   landi…6e7f8a9b│"
"│✓ shipped     COMPLETE       low      Landing 4 of the  7m03s   landi…2a3b4c5d│"
"│✗ stopped     FAIL-EXHAUSTED          0065 rebuild unit 7m03s   0065-…8c9d0e1f│"
"│older                                 2 hidden · a show                       │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"runs                                                                            "
"↑↓/jk move · Enter open run · a all runs · g/G top/bottom · / filter · r refresh"
