crates/brokkr-cli/src/tui/snapshots/fleet_tabbed_160x48.snap
---
source: crates/brokkr-cli/src/tui/snapshot_tests.rs
---
" 1 alpha   2 beta                                                                                                                                               "
"┌runs──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│needs you                                                                                                                                                     │"
"│? quarantined does not fold           a run whose journal does not fold                                                                 —       run-unfoldable│"
"│                                      quarantined: export and inspect                                                                                         │"
"│running                                                                                                                                                       │"
"│◐ design                              one derivation, three surfaces                                                                    6m58s   run-7         │"
"│◐ design                              an older feature                                                                                  7m03s   run-old       │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"runs · realm beta                                                                                                                                               "
"↑↓/jk move · Enter open run · [ ] 1-9 realm · d dashboard ≥195 · f live ≥257 · a all runs · g/G top/bottom · / filter · r refresh · ? help · q quit             "
