crates/brokkr-cli/src/tui/snapshots/fleet_tabbed_80x20.snap
---
source: crates/brokkr-cli/src/tui/snapshot_tests.rs
---
" 1 alpha   2 beta                                                               "
"┌runs──────────────────────────────────────────────────────────────────────────┐"
"│needs you                                                                     │"
"│? quarantined does not fold  a run whose journal does  —        run-unfoldable│"
"│running                                                                       │"
"│▶ design                     one derivation, three sur 6m58s    run-7         │"
"│▶ design                     an older feature          7m03s    run-old       │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"runs · realm beta                                                               "
"↑↓/jk move · Enter open run · [ ] 1-9 realm · a all runs · g/G top/bottom · / fi"
