crates/brokkr-cli/src/tui/snapshots/flow_drill_into_a_participant.snap
---
source: crates/brokkr-cli/src/tui/snapshot_tests.rs
---
start  level Run · pane 0 · cursor [None, None, None] · turn None · reading None
    status  runs · run run-7
    footer  ←→ rail · ↑↓ lanes · Enter scope phase · Tab pane · Esc back · / filter · r refresh · ? help · q quit
Tab -> Continue  level Run · pane 1 · cursor [None, None, None] · turn None · reading None
    status  runs · run run-7
    footer  ↑↓/jk move · Enter scope seat · Tab pane · Esc back · / filter · r refresh · ? help · q quit
Down -> Continue  level Run · pane 1 · cursor [None, Some("eff-i"), None] · turn None · reading None
    status  runs · run run-7
    footer  ↑↓/jk move · Enter scope seat · Tab pane · Esc back · / filter · r refresh · ? help · q quit
Enter -> Continue  level Run · pane 1 · cursor [None, Some("eff-i"), None] · turn None · reading None
    status  runs · run run-7 · scoped eff-i
    footer  ↑↓/jk move · Enter open seat · Tab pane · Esc back · / filter · r refresh · ? help · q quit
Enter -> Continue  level Participant · pane 0 · cursor [None, Some("eff-i"), None] · turn None · reading None
    status  runs · run run-7 · seat eff-i · scoped eff-i
    footer  ↑↓/jk scroll · g/G top/bottom · Tab pane · Esc back · / filter · r refresh · ? help · q quit
