crates/brokkr-cli/src/tui/snapshots/flow_go_back.snap
---
source: crates/brokkr-cli/src/tui/snapshot_tests.rs
---
start  level Participant · pane 1 · cursor [None, Some("eff-i"), None] · turn Some("0") · reading None
    status  runs · run run-7 · seat eff-i · scoped eff-i
    footer  ↑↓/jk move · Enter read turn · Esc unselect · g/G top/bottom · Tab pane · / filter · r refresh · ? help · q quit
Escape -> Continue  level Participant · pane 1 · cursor [None, Some("eff-i"), None] · turn None · reading None
    status  runs · run run-7 · seat eff-i · scoped eff-i
    footer  ↑↓/jk move · Enter read whole transcript · g/G top/bottom · Tab pane · Esc back · / filter · r refresh · ? help · q quit
Escape -> Continue  level Run · pane 1 · cursor [None, Some("eff-i"), None] · turn None · reading None
    status  runs · run run-7 · scoped eff-i
    footer  ↑↓/jk move · Enter open seat · Tab pane · Esc back · / filter · r refresh · ? help · q quit
Escape -> Continue  level Run · pane 1 · cursor [None, Some("eff-i"), None] · turn None · reading None
    status  runs · run run-7
    footer  ↑↓/jk move · Enter scope seat · Tab pane · Esc back · / filter · r refresh · ? help · q quit
Escape -> Continue  level Runs · pane 0 · cursor [None, Some("eff-i"), None] · turn None · reading None
    status  runs · run run-7
    footer  ↑↓/jk move · Enter open run · a all runs · g/G top/bottom · / filter · r refresh · ? help · q quit
Escape -> Continue  level Runs · pane 0 · cursor [None, Some("eff-i"), None] · turn None · reading None
    status  runs · run run-7
    footer  ↑↓/jk move · Enter open run · a all runs · g/G top/bottom · / filter · r refresh · ? help · q quit
